--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ html {
 }
 
 body {
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-family: "Outfit", sans-serif;
   height: 100vh;
   background-color: var(--light-gray);
@@ -37,10 +39,10 @@ body {
   flex-direction: column;
   width: 320px;
   border-radius: 20px;
-
   background-color: var(--white);
   box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
   padding: 16px;
+  margin: 10px;
 }
 
 .qr-image {
@@ -55,16 +57,16 @@ body {
 }
 
 h1 {
-  margin: 0;
-  margin-bottom: 1rem;
   color: var(--dark-blue);
   font-size: var(--header-size);
+  margin: 0;
+  margin-bottom: 1rem;
 }
 
 p {
-  margin: 0 0 0 0;
   color: var(--grayish-blue);
   font-size: var(--paragraph-size);
+  margin: 0;
 }
 
 .attribution {
